--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,24 @@
 [project]
 name = "comfyui_ino_nodes"
 description = "A comprehensive collection of custom nodes for ComfyUI that provides advanced file handling, S3 cloud storage integration, LoRA configuration management, and various utility functions."
-version = "1.0.5"
+version = "1.0.6"
 license = { file = "LICENSE" }
-dependencies = ["inocloudreve", "inopyutils", "python-dotenv"]
+readme = "README.md"
+requires-python = ">=3.8"
+dependencies = ["inocloudreve", "inopyutils", "numpy", "Pillow", "torch"]
+keywords = ["comfyui", "custom-nodes", "s3", "cloudreve", "lora", "file-handling", "utilities"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Topic :: Multimedia :: Graphics",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 
 [project.urls]
 Repository = "https://github.com/nobandegani/comfyui_ino_nodes"
